--- a/css/openstreetmap/map.css
+++ b/css/openstreetmap/map.css
@@ -27,13 +27,6 @@ a:hover {
     color: #ffffff;
 }
 
-#map {
-    height: 86%;
-    width: 96%;
-    padding: 0;
-    margin: 0;
-}
-
 #content {
     font-size: 1em;
 }
@@ -42,4 +35,67 @@ a:hover {
     font-size: 0.7em;
     font-style: italic;
     margin-bottom: 20px;
+}
+
+/*eigenes css*/
+
+#map {
+    height: 86%;
+    width: 90%;
+    padding: 0;
+    margin: 0;
+    float: left;
+}
+
+.olPopup, .olFramedCloudPopupContent {
+    max-height: 200px !important;
+    max-width: 200px !important;
+    background: white;
+}
+
+#menu-right {
+    float: right !important;
+    height: 86%;
+    width: 9%;
+}
+
+#menu-list {
+    list-style-type: none;
+    height: 100%;
+    width: 100%;
+    margin-left: 0;
+}
+
+#menu-list li {
+    width: 100%;
+    height: 16.67%;
+    cursor: pointer;
+    border-bottom: 1px solid #6f6f6f;
+    background-color: #ffc200;
+}
+
+#menu-list li:last-child {
+    border-bottom: none;
+}
+
+#menu-list li:hover {
+    background: darkorange;
+}
+
+#menu-list li img {
+
+}
+
+#menu-items {
+    width: 200px;
+    height: 86%;
+    position: absolute;
+    background: red;
+    margin-left: -201px;
+    z-index: 1000;
+    display: none;
+}
+
+.menu-item {
+    width: 20%;
 }
