--- a/css/openstreetmap/map.css
+++ b/css/openstreetmap/map.css
@@ -59,6 +59,56 @@ a:hover {
     width: 9%;
 }
 
+#menu-left {
+    float: left;
+    display: none;
+    height: 100%;
+    width: 30%;
+    position: absolute;
+    z-index: 1000;
+    background: #2c60b5;
+    color: #f5f5f5;
+    padding: 1rem;
+}
+
+
+.entry-title {
+    font-weight: bold;
+    line-height: 1.5rem;
+}
+
+.more-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.more-link:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+#read-more-button {
+    background: white;
+    text-align: center;
+    color: #3a9bd8;
+    margin-top: 1rem;
+}
+
+#read-more-button:hover {
+    background: #3a9bd8;
+    color: white;
+}
+.preview-link {
+    color: white;
+    text-decoration: none;
+    font-size: 50%;
+}
+
+.preview-link:hover, .preview-link:focus {
+    color: white;
+    text-decoration: none;
+}
+
 #menu-list {
     list-style-type: none;
     height: 100%;
@@ -72,10 +122,10 @@ a:hover {
     height: 16.67%;
     cursor: pointer;
     border-bottom: 1px solid #6f6f6f;
-    background-color: #ffc200;
+    background-color: #ffffff;
     line-height: 4rem;
     text-align: center;
-    padding-top: 3rem;
+
 }
 
 #menu-list li:last-child {
@@ -83,19 +133,37 @@ a:hover {
 }
 
 #menu-list li:hover {
-    background: darkorange;
+    background: #3b9cd8;
 }
 
 #menu-list li i {
-    font-size: 4rem;
     height: 100%;
     line-height: 4rem;
 }
 
 @media (max-width: 40em) {
+    #menu-left {
+        width: 50%;
+        font-size: 50%;
+    }
+
+    .preview-link {
+        font-size: 30%;
+        line-height: 0rem;
+    }
+
     #menu-list li i {
         font-size: 2rem;
         height: 100%;
+    }
+
+    .more-link {
+        font-size: 75%;
+
+    }
+
+    .entry-title {
+        line-height: 1rem;
     }
 }
 
@@ -108,9 +176,7 @@ a:hover {
 
 @media (min-width: 64em) {
     #menu-list li i {
-        font-size: 4rem;
         height: 100%;
-
     }
 }
 
@@ -118,7 +184,7 @@ a:hover {
     width: 200px;
     height: 20%;
     position: absolute;
-    background: red;
+    background: #2d61b5;
     margin-left: -200px;
     z-index: 1005;
     display: none;
@@ -138,4 +204,18 @@ a:hover {
 
 #close-menu i {
     font-size: 2rem;
+}
+
+#close-preview {
+    cursor: pointer;
+    float: right;
+    clear: both;
+}
+
+#close-preview i {
+    font-size: 1.5rem;
+}
+
+.fi-x {
+    color: white;
 }
