--- a/css/openstreetmap/map.css
+++ b/css/openstreetmap/map.css
@@ -74,7 +74,6 @@ a:hover {
     padding: 1rem;
 }
 
-
 .entry-title {
     font-weight: bold;
     line-height: 1.5rem;
@@ -101,6 +100,7 @@ a:hover {
     background: #3a9bd8;
     color: white;
 }
+
 .preview-link {
     color: white;
     text-decoration: none;
@@ -223,6 +223,14 @@ a:hover {
     color: white;
 }
 
+#identify-location {
+    margin-top: 10px;
+}
+
+#location-start-wrapper {
+    padding: 0 10px 0 10px;
+}
+
 #location-start {
     max-width: 400px;
     position: absolute;
@@ -230,6 +238,7 @@ a:hover {
     right: 0;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 50px;
     background-color: white;
     z-index: 1030;
     border: 1px solid black;
