--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -13,8 +13,8 @@ html, body {
 #selected-location {
     position: absolute;
     padding: 15px;
-    /*background: rgba(0, 0, 0, .50);*/
-    background: transparent;
+    background: rgba(0, 0, 0, .50);
+    /*background: transparent;*/
     z-index: 100;
     width: 91%;
     text-align: center;
