--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -138,7 +138,7 @@ a:hover {
     background-color: #ffffff;
     line-height: 4rem;
     text-align: center;
-    padding-top: 3rem;
+    padding: 1rem;
 }
 
 #menu-list li:last-child {
