--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -51,8 +51,8 @@ a:hover {
 /*eigenes css*/
 
 #map {
-    height: 100%;
-    width: 91%;
+    height: 92%;
+    width: 100%;
     padding: 0;
     margin: 0;
     float: left;
@@ -125,36 +125,40 @@ a:hover {
 
 #menu-list {
     list-style-type: none;
-    height: 100%;
+    height: 8%;
     width: 100%;
-    margin-left: 0;
-    border-left: 1px solid #6f6f6f;
+    text-align: center;
 }
 
 #menu-list li {
-    width: 100%;
-    height: 16.67%;
-    cursor: pointer;
-    border-bottom: 1px solid #6f6f6f;
-    background-color: #ffffff;
-    line-height: 7rem;
+    /*    cursor: pointer;
+        width: 100%;
+        border-bottom: 1px solid #6f6f6f;
+        background-color: #ffffff;
+        text-align: center;
+        margin-right: 11%;
+        display: inline;*/
+    display: inline;
+    padding: 5%;
     text-align: center;
-    padding: 1rem;
+    width: 100%;
+    height: 100%;
 }
 
-#menu-list li:last-child {
-    border-bottom: none;
-}
-
-#menu-list li:hover {
+#menu-list li:hover, #menu-list li i:hover {
     background: #3b9cd8;
 }
 
+
 #menu-list li i {
     height: 100%;
-    line-height: 7rem;
+    width: 100%;
+    line-height: 3rem;
+    font-size: 3rem;
+    text-align: center;
 }
 
+/*
 .leaflet-popup-content-wrapper {
     z-index: 1000;
     height: 10rem;
@@ -209,31 +213,31 @@ a:hover {
     z-index: 1005;
     display: none;
 }
+*/
 
-#menu-items .menu-item {
-    display: none;
+.menu-item {
+    position: fixed;
+    z-index: 100;
+    display: block;
+    margin-left: 25%;
+    margin-right: 25%;
+    width: 50%;
 }
 
 #close-menu {
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    float: right;
-    clear: both;
+
 }
 
 #close-menu i {
-    font-size: 2rem;
+
 }
 
 #close-preview {
-    cursor: pointer;
-    float: right;
-    clear: both;
+
 }
 
 #close-preview i {
-    font-size: 1.5rem;
+
 }
 
 .fi-x {
