--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -85,11 +85,15 @@ a:hover {
     padding: 1rem;
     overflow-y: auto;
 }
+
+
+
 #share-menu{
     display: none;
+    text-align: center;
     float: left;
     height: 93%;
-    width: 30%;
+    width: 10%;
     position: absolute;
     z-index: 1000;
     background: #2c60b5;
