--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -366,6 +366,18 @@ a:hover {
     bottom: 0.7rem;
 }
 
+#loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    font-size: 3rem;
+    z-index: 10000000;
+    padding-top: 20%;
+    display: none;
+}
+
 .
 
 
