--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -83,7 +83,8 @@ a:hover {
     background: #2c60b5;
     color: #f5f5f5;
     padding: 1rem;
-    overflow-y: auto;
+    overflow-y: scroll;
+    margin-top: 5.7%
 }
 
 
@@ -148,9 +149,9 @@ a:hover {
 #menu-list {
     margin-top: 1%;
     list-style-type: none;
-    height: 8%;
+    /*height: 8%;*/
     width: 100%;
-    text-align: center;
+    text-align: left;
 }
 
 #menu-list li {
@@ -162,7 +163,9 @@ a:hover {
         margin-right: 11%;
         display: inline;*/
     display: inline;
-    padding: 5%;
+
+    margin-left: 20%;
+    cursor: pointer;
     text-align: center;
     width: 100%;
     height: 100%;
@@ -336,6 +339,8 @@ a:hover {
     overflow: scroll;
     height: 15rem;
     display: none;
+    width: 46.9%;
+    margin-left: 0.9rem;
 }
 
 #autocomplete li {
@@ -363,7 +368,18 @@ a:hover {
 
 #search-button {
     margin-left: 1rem;
-    bottom: 0.7rem;
+    height: 2.3rem;
+    padding: inherit;
+}
+
+#search-wrapper {
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    margin-top: 1rem;
+    display: none;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .
