--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -10,6 +10,7 @@ html, body {
     color: #ffffff;
 }
 
+
 #selected-location {
     display: none;
     position: absolute;
@@ -88,6 +89,7 @@ a:hover {
         background: #2c60b5;
         color: #f5f5f5;
         padding: 1rem;
+        overflow-y: auto;
     }
 }
 
@@ -286,7 +288,8 @@ a:hover {
 }
 */
 
-#menu-rechts{
+#menu-rechts {
+    display: none;
     right: 0;
     height: 100%;
     width: 20%;
@@ -389,7 +392,7 @@ li.accordion-navigation {
     height: 15rem;
     display: none;
     width: 46.9%;
-    margin-left: 35%;
+    margin-left: 27.3%;
     position: fixed;
     z-index: 10000;
     top: 4.7rem;
