--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -360,12 +360,12 @@ li.accordion-navigation {
 }
 
 .accordion .accordion-navigation.active > a, .accordion dd.active > a {
-    backgound-color: #008CBA;
+    backgound-color: #2c60b5;
     color: #F5F5F5;
 }
 
 .accordItem{
-    backgound-color: #008CBA;
+    background-color: #2c60b5!important;
 }
 
 #close-menu {
