--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -40,6 +40,7 @@ a:hover {
     position: fixed;
     z-index: 1000;
     width: 100%;
+    height: 3.5rem;
     background: rgba(0, 0, 0, 0.5);
 }
 
@@ -95,7 +96,7 @@ a:hover {
     float: right !important;
     height: 100%;
     width: 9%;
-    margin-top: 4.5rem;
+    margin-top: 3.5rem;
 }
 
 @media (min-width: 64em) {
@@ -110,7 +111,7 @@ a:hover {
         color: #f5f5f5;
         padding: 1rem;
         overflow-y: auto;
-        margin-top: 4.5rem;
+        margin-top: 3.5rem;
     }
 }
 
@@ -181,9 +182,7 @@ a:hover {
 }
 
 #menu-list {
-    margin-top: 1%;
     list-style-type: none;
-    /*height: 8%;*/
     width: 100%;
     margin-left: 0 !important;
     text-align: center;
@@ -191,11 +190,22 @@ a:hover {
 
 #menu-list li {
     display: inline;
-    padding: 1rem;
     cursor: pointer;
     text-align: center;
     width: 100%;
     height: 100%;
+}
+
+@media (min-width: 40em) {
+    #menu-list li {
+        padding: 1rem;
+    }
+}
+
+@media (max-width: 40em) {
+    #menu-list li {
+        padding: 0;
+    }
 }
 
 #menu-list li i:hover {
@@ -210,6 +220,7 @@ a:hover {
     text-align: center;
     padding-left: .5rem;
     padding-right: .5rem;
+    padding-bottom: .2rem;
 }
 
 .leaflet-popup-content-wrapper {
@@ -305,10 +316,10 @@ a:hover {
     display: none;
     right: 0;
     height: 100%;
-    width: 20%;
+    width: 30%;
     position: absolute;
     z-index: 1000;
-    margin-top: 4.5rem;
+    margin-top: 3.5rem;
     color: #f5f5f5;
     background: #2c60b5;
 }
@@ -316,12 +327,14 @@ a:hover {
 @media (min-width: 40em) and (max-width: 64em) {
     #menu-rechts, #favorites-menu {
         width: 50%;
+        margin-top: 3.5rem;
     }
 }
 
 @media (max-width: 40em) {
     #menu-rechts, #favorites-menu {
         width: 90%;
+        margin-top: 0;
     }
 }
 
@@ -502,7 +515,7 @@ li.accordion-navigation {
     position: absolute;
     z-index: 100;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: .6rem;
     display: none;
     margin-left: 0;
     margin-right: 0;
