--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -110,8 +110,8 @@ a:hover {
         background: #2c60b5;
         color: #f5f5f5;
         padding: 1rem;
-        overflow-y: auto;
         margin-top: 3.5rem;
+        overflow-y: scroll;
     }
 }
 
@@ -125,7 +125,7 @@ a:hover {
         z-index: 1000;
         background: #2c60b5;
         color: #f5f5f5;
-        padding: 1rem;
+        padding: 1rem;        overflow-y: scroll;
     }
 }
 
@@ -342,11 +342,13 @@ a:hover {
     cursor: pointer;
     width: 100%;
     padding: .5rem;
+    height: 3.55rem;
     border-bottom: 1px solid #fff;
 }
 
 .close-menu-right i {
     font-size: 1.5rem;
+    padding: .5rem;
     cursor: pointer;
 }
 
