--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -96,7 +96,6 @@ a:hover {
     float: right !important;
     height: 100%;
     width: 9%;
-    margin-top: 3.5rem;
 }
 
 @media (min-width: 64em) {
@@ -110,7 +109,6 @@ a:hover {
         background: #2c60b5;
         color: #f5f5f5;
         padding: 1rem;
-        margin-top: 3.5rem;
         overflow-y: scroll;
     }
 }
@@ -319,7 +317,6 @@ a:hover {
     width: 30%;
     position: absolute;
     z-index: 1000;
-    margin-top: 3.5rem;
     color: #f5f5f5;
     background: #2c60b5;
 }
@@ -327,7 +324,6 @@ a:hover {
 @media (min-width: 40em) and (max-width: 64em) {
     #menu-rechts, #favorites-menu {
         width: 50%;
-        margin-top: 3.5rem;
     }
 }
 
@@ -500,6 +496,9 @@ li.accordion-navigation {
 .marker-popup {
     position: absolute;
     cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .marker-title {
