--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -109,7 +109,7 @@ a:hover {
         background: #2c60b5;
         color: #f5f5f5;
         padding: 1rem;
-        overflow-y: scroll;
+        overflow-y: hidden;
     }
 }
 
@@ -123,7 +123,8 @@ a:hover {
         z-index: 1000;
         background: #2c60b5;
         color: #f5f5f5;
-        padding: 1rem;        overflow-y: scroll;
+        padding: 1rem;
+        overflow-y: hidden;
     }
 }
 
@@ -532,11 +533,11 @@ li.accordion-navigation {
     display: none;
 }
 
-
 #showFavOnMap:hover {
     background: #3a9bd8;
     color: white;
 }
+
 #showFavOnMap {
     float: right;
     background: white;
