--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -40,20 +40,20 @@ a:hover {
     position: fixed;
     z-index: 1000;
     width: 100%;
-    height: 3.5rem;
+    height: 100px;
     background: rgba(0, 0, 0, 0.5);
 }
 
 @media (max-width: 40em) {
     #header.menu-visible {
-        height: 320px;
+        height: 100%;
     }
 
 }
 
 @media (min-width: 40em) and (max-width: 64em) {
     #header.menu-visible {
-        height: 250px;
+        height: 350px;
     }
 
 }
@@ -185,6 +185,7 @@ a:hover {
     width: 100%;
     margin-left: 0 !important;
     text-align: center;
+    line-height: 110px;
 }
 
 #menu-list li {
@@ -506,7 +507,6 @@ li.accordion-navigation {
 }
 
 #search-button {
-    margin-left: 1rem;
     height: 2.3rem;
     padding: inherit;
 }
@@ -543,4 +543,7 @@ li.accordion-navigation {
     background: white;
     text-align: center;
     color: #3a9bd8;
+}
+label{
+    color: white !important;
 }
