--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -40,7 +40,7 @@ a:hover {
     position: fixed;
     z-index: 1000;
     width: 100%;
-    height: 100px;
+    height: 85px;
     background: rgba(0, 0, 0, 0.5);
 }
 
@@ -50,6 +50,7 @@ a:hover {
     }
     #header.menu-visible {
         height: 100%;
+        overflow-y: auto;
     }
 
 }
