--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -134,7 +134,7 @@ a:hover {
         background: #2c60b5;
         color: #f5f5f5;
         padding: 1rem;
-        overflow-y: hidden;
+        overflow-y: scroll;
     }
 }
 
