--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -116,7 +116,7 @@ a:hover {
         width: 30%;
         position: fixed;
         z-index: 1000;
-        background: #2c60b5;
+        background: rgb(0, 140, 186);
         color: #f5f5f5;
         padding: 1rem;
         overflow-y: scroll;
@@ -358,7 +358,7 @@ a:hover {
     padding: .5rem;
     height: 3.55rem;
     border-bottom: 2px solid #fff;
-    background: rgba(0, 140, 186,0.8);
+    background: rgba(0, 140, 186,0.9);
 }
 
 .accordDiv{
@@ -429,6 +429,10 @@ li.accordion-navigation {
 .accordItem {
     /* background-color: #2c60b5 !important; */
     background: rgba(0, 140, 186, 0.9);
+}
+
+#myModal{
+    border-radius: 40px;
 }
 
 #close-menu {
