--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -1,3 +1,35 @@
+#animDiv{
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    position: relative;
+    -webkit-animation-name: example; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
+    -webkit-animation-iteration-count: 1; /* Chrome, Safari, Opera */
+    -webkit-animation-direction: reverse; /* Chrome, Safari, Opera */
+    animation-name: example;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-direction: reverse;
+    z-index: 1000;
+}
+@-webkit-keyframes example {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+    50%  {background-color:blue; left:200px; top:200px;}
+    75%  {background-color:green; left:0px; top:200px;}
+    100% {background-color:red; left:0px; top:0px;}
+}
+
+/* Standard syntax */
+@keyframes example {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+    50%  {background-color:blue; left:200px; top:200px;}
+    75%  {background-color:green; left:0px; top:200px;}
+    100% {background-color:red; left:0px; top:0px;}
+}
+
 html, body {
     background-color: #000000;
     height: 100%;
@@ -336,7 +368,7 @@ a:hover {
     z-index: 1000;
     color: #f5f5f5;
    /* background: #2c60b5; */
-    /* background: rgba(0, 140, 186, 0.9);*/
+    background: rgba(0, 140, 186, 0.95);
 }
 
 @media (min-width: 40em) and (max-width: 64em) {
@@ -428,7 +460,7 @@ li.accordion-navigation {
 
 .accordItem {
     /* background-color: #2c60b5 !important; */
-    background: rgba(0, 140, 186, 0.9);
+    background: rgba(0, 140, 186, 0.95);
 }
 
 #myModal{
