--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -1,5 +1,5 @@
 #animDiv{
-    
+
     width: 200px;
     height: 130px;
     background-color: red;
@@ -379,8 +379,8 @@ a:hover {
     position: absolute;
     z-index: 1000;
     color: #f5f5f5;
-   /* background: #2c60b5; */
     background: rgba(0, 140, 186, 0.95);
+
 }
 
 @media (min-width: 40em) and (max-width: 64em) {
@@ -400,9 +400,10 @@ a:hover {
     cursor: pointer;
     width: 100%;
     padding: .5rem;
-    height: 3.55rem;
+   /* height: 3.55rem; */
+    height: 5.4rem;
     border-bottom: 2px solid #fff;
-    background: rgba(0, 140, 186,0.9);
+    background: rgba(0, 140, 186,0.4);
 }
 
 .accordDiv{
@@ -471,8 +472,9 @@ li.accordion-navigation {
 }
 
 .accordItem {
-    /* background-color: #2c60b5 !important; */
+
     background: rgba(0, 140, 186, 0.95);
+
 }
 
 #myModal{
