--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -510,8 +510,11 @@ a:hover {
     background: rgba(0, 140, 186, 0.4);
 }
 
-.accordDiv {
+.accordDiv a{
     color: #007ba4;
+}
+.accordDiv{
+    color: #5c5c3d;
 }
 
 .close-menu-right i {
