--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -590,9 +590,9 @@ li.accordion-navigation {
 }
 
 .accordItem {
-
-    background: rgba(0, 140, 186, 0.95);
-
+    background: rgba(0, 140, 186, 0.9) !important;
+    color: #F5F5F5 !important;
+    border-style: outset !important;
 }
 
 .accordion-navigation:hover, .accordion-navigation:active {
