--- a/css/newsmapstyle.css
+++ b/css/newsmapstyle.css
@@ -571,7 +571,7 @@ a:hover {
 }
 
 li.accordion-navigation {
-    border-bottom: 2px solid whitesmoke !important;
+    border-top: 2px solid whitesmoke !important;
 }
 
 .menu-item {
@@ -592,7 +592,6 @@ li.accordion-navigation {
 .accordItem {
     background: rgba(0, 140, 186, 0.9) !important;
     color: #F5F5F5 !important;
-    border-style: outset !important;
 }
 
 .accordion-navigation:hover, .accordion-navigation:active {
